--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.8.1",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
@@ -18,7 +19,8 @@
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.5",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
