--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
-    "axios": "^1.8.1",
+    "@tanstack/react-query": "^5.74.3",
+    "axios": "^1.8.4",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
