--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,26 @@
-name: Deploy to Firebase
+name: Deploy to Firebase (Production)
 on:
   push:
-    branches: [main]
+    branches: [main] # Only deploy from main branch
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm install && npm run build
+
+      # Set up Node.js environment
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "22.14.0"
+
+      # Install dependencies and build
+      - run: npm ci
+      - run: npm run build
+
+      # Deploy to Firebase Hosting (Production)
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
-          projectId: fir-gula-92427
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+          projectId: "fir-gula-92427"
+          # No channelId = production deployment
