--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
 
       # Install dependencies and build
       - run: npm ci
+      - run: npm audit fix --force || true
       - run: npm run build
 
       # Deploy to Firebase Hosting (Production)
@@ -23,4 +24,5 @@ jobs:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
           projectId: "fir-gula-92427"
+          target: "production" # Critical fix
           # No channelId = production deployment
