--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^4.0.6",
     "vite": "^6.1.0"
   }
